--- a/src/Components/Navbar.css
+++ b/src/Components/Navbar.css
@@ -3,6 +3,7 @@ nav {
     background-color: #333;
     color: #fff;
     padding: 10px 0;
+    /* position: fixed; */
   }
   
   ul {
@@ -28,4 +29,16 @@ nav {
   }
   
 
+  .logo {
+    width: 35px;
+    height: auto;
+  }
+  
+  .searchBar {
+    padding: 0.5rem;
+    border-radius: 4px;
+    border: 1px solid #ccc;
+    margin-right: 1rem;
+    max-width: 300px;
+  }
   
