all charts done

--- a/src/Components/CreateUser.css
+++ b/src/Components/CreateUser.css
@@ -25,6 +25,11 @@
     color: #555;
   }
   
+
+  .input11{
+    padding: 20px;
+  }
+
   .create-user-container input,
   .create-user-container select {
     width: 100%;
