--- a/src/Components/Dashboard.css
+++ b/src/Components/Dashboard.css
@@ -35,5 +35,17 @@
 
 /* Additional styling if needed */
 .graph-container {
-  margin-bottom: 20px;
+  margin-top: -50px;
+  margin-right: 20px;
+  margin-left: 80px;
 }
+
+.graph-container1 {
+  margin-top: -20px;
+}
+
+.graph-container2 {
+  margin-top: -60px;
+}
+
+
