--- a/src/Components/quality.css
+++ b/src/Components/quality.css
@@ -6,9 +6,10 @@
   .main-content {
     flex: 1;
     display: grid;
-    grid-template-columns: repeat(2, 1fr);
-    grid-template-rows: repeat(2, 1fr);
+    /* grid-template-columns: repeat(2, 1fr);
+    grid-template-rows: repeat(2, 1fr); */
     gap: 20px;
+    
   }
 
   .revenue-card {
@@ -20,6 +21,18 @@
     margin: 25px;
     background-color: #f9f9f9;
     max-height: 120px;
+  }
+
+  .revenue-card1 {
+    border: 1px solid #ccc;
+    border-radius: 8px; 
+    padding: 20px;
+    text-align: center;
+    max-width: 300px;
+    margin: 25px;
+    background-color: #f9f9f9;
+    max-height: 120px;
+    margin-right: 60px;
   }
   
   h2 {
