--- a/src/Components/roi.css
+++ b/src/Components/roi.css
@@ -1,11 +1,12 @@
 /* roiChart.css */
 
 .chart-container {
-    max-width: 600px;
-    margin: 20px auto;
+    max-width: 800px; /* You can adjust this value as needed */
+    margin: 20px;
     border: 1px solid #ddd;
-    border-radius: 8px;
-    padding: 20px;
-    box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+    border-radius: 12px; /* You can adjust this value as needed */
+    padding: 20px; /* You can adjust this value as needed */
+    box-shadow: 0 0 15px rgba(0, 0, 0, 0.2); /* You can adjust this value as needed */
   }
+  
   
